<resources>
    <plurals name="delete_title">
        <item quantity="one">%d item selected</item>
        <item quantity="other">%d items selected</item>
    </plurals>
    <string name="app_name" translatable="false">Password Store</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_delete_title">Directory already exists</string>
    <string name="dialog_delete_msg">Target directory already exists. Current version only supports a single store. Do you want to delete the current password store directory?\n(%1$s)</string>
    <string name="dialog_delete">Delete directory</string>
    <string name="dialog_do_not_delete">Cancel</string>
    <string name="title_activity_git_clone">Repository information</string>
    <string name="title_activity_git_config" translatable="false">Git configuration</string>
    <string name="title_activity_git_log">Commit log</string>
    <string name="creation_dialog_text">Please clone or create a new repository below before trying to add a password or running any synchronization operation.</string>
    <plurals name="delete_dialog_text">
        <item quantity="one">Are you sure you want to delete the password?</item>
        <item quantity="other">Are you sure you want to delete %d passwords?</item>
    </plurals>
    <string name="delete_directory_progress_text">Deleting…</string>
    <string name="move">Move</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="change">Change</string>
    <string name="use">Use</string>
    <string name="directory_selected_title">Directory already selected</string>
    <string name="directory_selected_message">Do you want to use \"%1$s\"?</string>
    <string name="password_exists_title">Password already exists!</string>
    <string name="password_exists_message">This will overwrite %1$s with %2$s.</string>
    <string name="password_move_error_title">Error while moving passwords</string>
    <string name="password_move_error_message">Failed to move %1$s to %2$s</string>
    <string name="git_commit_add_text">Add generated password for %1$s using Android Password Store.</string>
    <string name="git_commit_edit_text">Edit password for %1$s using Android Password Store.</string>
    <string name="git_commit_remove_text">Remove %1$s from store.</string>
    <string name="git_commit_move_text">Rename %1$s to %2$s.</string>
    <string name="git_commit_move_multiple_text">Move multiple passwords to %1$s.</string>
    <string name="git_commit_gpg_id">Initialize GPG IDs in %1$s.</string>
    <string name="clipboard_password_toast_text">Password copied to clipboard, you have %d seconds to paste it somewhere.</string>
    <string name="clipboard_password_no_clear_toast_text">Password copied to clipboard</string>
    <string name="clipboard_copied_text">Copied to clipboard</string>
    <string name="clipboard_otp_copied_text">OTP code copied to clipboard</string>
    <string name="file_toast_text">Please provide a file name</string>
    <string name="path_toast_text">Please provide a file path</string>
    <string name="empty_toast_text">You cannot use an empty password or empty extra content</string>
    <string name="jgit_error_dialog_title">An error occurred during a Git operation</string>
    <string name="ssh_preferences_dialog_text">Please import or generate your SSH key file in the preferences</string>
    <string name="ssh_preferences_dialog_title">No SSH key</string>
    <string name="ssh_preferences_dialog_import">Import</string>
    <string name="ssh_preferences_dialog_generate">Generate</string>
    <string name="passphrase_dialog_title">Authenticate</string>
    <string name="passphrase_dialog_text">Please provide the passphrase for your SSH key</string>
    <string name="password_dialog_text">Please provide the password for this repository</string>
    <string name="location_dialog_create_text">Select where do you want to create your password repository</string>
    <string name="location_sdcard">SD-Card</string>
    <string name="location_hidden">Hidden (Preferred)</string>
    <string name="external_repository_dialog_title">Choose where to store the passwords</string>
    <string name="external_repository_dialog_text">You must select a directory where to store your passwords. If you want to store your passwords within the hidden storage of the application, cancel this dialog and disable the \"External Repository\" option.</string>
    <string name="server_name">Server</string>
    <string name="server_url">Repository URL</string>
    <string name="server_branch">Branch</string>
    <string name="connection_mode">Authentication Mode</string>
    <string name="git_user_name_hint">Username</string>
    <string name="git_user_email">Email</string>
    <string name="invalid_email_dialog_text">Please enter a valid email address</string>
    <string name="clone_button">Clone</string>
    <string name="crypto_name_hint">Name</string>
    <string name="crypto_pass_label">Password</string>
    <string name="crypto_extra_label">Extra content</string>
    <string name="crypto_encrypt_username_label">Encrypt username</string>
    <string name="crypto_select">Select</string>
    <string name="crypto_save">Save</string>
    <string name="crypto_save_and_copy">Save and Copy</string>
    <string name="action_search">Search</string>
    <string name="password">Password</string>
    <string name="otp">OTP</string>
    <string name="extra_content">Extra content:</string>
    <string name="username">Username</string>
    <string name="edit_password">Edit password</string>
    <string name="copy_password">Copy password</string>
    <string name="share_as_plaintext">Share as plaintext</string>
    <string name="last_changed">Last changed %s</string>
    <string name="pref_repository_title">Repository</string>
    <string name="pref_edit_server_info">Edit Git server settings</string>
    <string name="pref_edit_git_config">Local Git config &amp; utilities</string>
    <string name="pref_ssh_title">Import SSH key</string>
    <string name="pref_ssh_keygen_title">Generate SSH key pair</string>
    <string name="pref_ssh_see_key_title">View generated public SSH key</string>
    <string name="pref_git_delete_repo">Delete repository</string>
    <string name="pref_dialog_delete_title">Clear repository</string>
    <string name="pref_category_general_title">General</string>
    <string name="pref_category_title_passwords">Passwords</string>
    <string name="pref_clipboard_timeout_title">Password copy timeout</string>
    <string name="pref_clipboard_timeout_summary">Set the time (in seconds) you want the password to be in clipboard. 0 means forever. Current value: %1$s</string>
    <string name="pref_copy_title">Automatically copy password</string>
    <string name="pref_copy_dialog_title">Automatically copy the password to the clipboard after decryption was successful.</string>
    <string name="ssh_key_import_error_not_an_ssh_key_message">Selected file does not appear to be an SSH private key.</string>
    <string name="ssh_key_success_dialog_title">SSH-key imported</string>
    <string name="ssh_key_error_dialog_title">Key import error</string>
    <string name="ssh_key_error_dialog_text">Message : \n</string>
    <string name="pref_recursive_filter">Recursive filtering</string>
    <string name="pref_recursive_filter_hint">Recursively find passwords of the current directory.</string>
    <string name="pref_sort_order_title">Password sort order</string>
    <string name="pref_folder_first_sort_order">Folders first</string>
    <string name="pref_file_first_sort_order">Files first</string>
    <string name="pref_type_independent_sort_order">Type independent</string>
    <string name="pref_recently_used_sort_order">Recently used</string>
    <string name="pref_autofill_title">Autofill</string>
    <string name="pref_autofill_enable_title">Enable Autofill</string>
    <string name="pref_autofill_enable_msg">Tap OK to go to Accessibility settings. There, tap Password Store under Services then tap the switch in the top right to turn it on or off.</string>
    <string name="pref_autofill_enable_msg2">Once the service is on, a dialog will appear when you click on a password field in an app if a matching password for the app exists.</string>
    <string name="pref_autofill_enable_msg3">Password Store attempts to match apps with passwords automatically. You can change this default setting and also matching settings per-app.</string>
    <string name="pref_autofill_apps_title">App and website settings</string>
    <string name="pref_autofill_default_title">Automatically match by default</string>
    <string name="pref_autofill_default_hint">Default to \'Automatically match\' for apps without custom settings. Otherwise, \'Never match.\'</string>
    <string name="pref_autofill_always_title">Always show dialog</string>
    <string name="pref_autofill_full_path_title">Show full path</string>
    <string name="pref_autofill_full_path_hint">Show full path of matching password files</string>
    <string name="pref_misc_title">Misc</string>
    <string name="pref_clear_clipboard_title">Clear clipboard 20 times</string>
    <string name="pref_clear_clipboard_hint">Store consecutive numbers in the clipboard 20 times. Useful on Samsung phones that feature clipboard history.</string>
    <string name="pref_git_delete_repo_summary">Deletes local (hidden) repository</string>
    <string name="pref_external_repository">External repository</string>
    <string name="pref_external_repository_summary">Use an external password repository</string>
    <string name="pref_select_external_repository">Select external repository</string>
    <string name="prefs_export_passwords_title">Export passwords</string>
    <string name="prefs_export_passwords_summary">Exports the encrypted passwords to an external directory</string>
    <string name="prefs_version">Version</string>
    <string name="pref_category_title_oopass">OOPASS</string>
    <string name="pref_oopass_api_key_email_title">Email for API</string>
    <string name="pref_oopass_api_key_email_summary">Email for API abuse notifications</string>
    <string name="pref_oopass_server_host_title">Server (HOST/IP)</string>
    <string name="pref_oopass_server_host_summary">OOPASS server hostname or IP address</string>
    <string name="pref_oopass_server_port_title">Server Port</string>
    <string name="pref_oopass_server_port_summary">OOPASS server port</string>
    <string name="pref_oopass_requested_chars_title">Desired Password Characters</string>
    <string name="pref_oopass_requested_chars_summary">Possible characters used in all generated passwords</string>
    <string name="pref_oopass_requested_length_title">Desired Password Length</string>
    <string name="pref_oopass_requested_length_summary">Length of all generated passwords</string>
    <string name="pref_oopass_hmac_key_title">HMAC key</string>
    <string name="pref_oopass_hmac_key_summary">Change to migrate between devices: 32 bytes alphanumeric</string>
    <string name="pwgen_title">Generate Password</string>
    <string name="pwgen_generate">Generate</string>
    <string name="pwgen_include">Include</string>
    <string name="bottom_sheet_oopass_info">Provide the information and tap &quot;Get Password&quot;</string>
    <string name="bottom_sheet_oopass_title">OOPASS Password Manager</string>
    <string name="bottom_sheet_oopass_get_password">Get Password</string>
    <string name="bottom_sheet_oopass_mp_desc">Enter Master Password:</string>
    <string name="bottom_sheet_oopass_mp_layout">Type here</string>
    <string name="bottom_sheet_oopass_location_desc">Enter Location Phrase:</string>
    <string name="bottom_sheet_oopass_location_layout">gmail.com</string>
    <string name="bottom_sheet_oopass_user_desc">Enter Service User:</string>
    <string name="bottom_sheet_oopass_user_layout">username</string>
</resources>