<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2014-2020 The Android Password Store Authors. All Rights Reserved.
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/oopass_title"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/bottom_sheet_oopass_title"
        android:textAlignment="viewStart"
        android:textColor="?attr/colorOnSurface"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="?attr/colorSecondary" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/oopass_info"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/bottom_sheet_oopass_info"
        android:textAlignment="viewStart"
        android:textColor="?attr/colorOnSurface"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/oopass_title"
        app:rippleColor="?attr/colorSecondary" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/oopass_mp_desc"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/bottom_sheet_oopass_mp_desc"
        android:textAlignment="viewStart"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toBottomOf="@id/oopass_info"
        app:rippleColor="?attr/colorSecondary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oopass_mp_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_item_height"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="0dp"
        android:hint="@string/bottom_sheet_oopass_mp_layout"
        app:layout_constraintTop_toBottomOf="@id/oopass_mp_desc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oopass_mp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/oopass_location_desc"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/bottom_sheet_oopass_location_desc"
        android:textAlignment="viewStart"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toBottomOf="@id/oopass_mp_layout"
        app:rippleColor="?attr/colorSecondary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oopass_location_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_item_height"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="0dp"
        android:hint="@string/bottom_sheet_oopass_location_layout"
        app:layout_constraintTop_toBottomOf="@id/oopass_location_desc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oopass_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/oopass_user_desc"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/bottom_sheet_oopass_user_desc"
        android:textAlignment="viewStart"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toBottomOf="@id/oopass_location_layout"
        app:rippleColor="?attr/colorSecondary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oopass_user_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_item_height"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="0dp"
        android:hint="@string/bottom_sheet_oopass_user_layout"
        app:layout_constraintTop_toBottomOf="@id/oopass_user_desc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oopass_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/oopass_get_password"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_item_height"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/bottom_sheet_oopass_get_password"
        android:textAlignment="viewStart"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toBottomOf="@id/oopass_user_layout"
        app:rippleColor="?attr/colorSecondary" />

</androidx.constraintlayout.widget.ConstraintLayout>
